Improve Director PDF generation and UI form controls
- Fixed Director PDF generation to correctly print bitácora metadata
  (period, state, creation date) by passing full bitacora JSON
- Improved PDF layout logic without altering backend or data flow
- Enhanced Director UI forms:
  - Replaced free-text fields with combo boxes for project type and subtypes
  - Added calendar date pickers for date selection
  - Ensured clean form state on open (no default pre-filled values)
- Minor UI consistency improvements across Director dialogs

All changes are frontend-only and preserve existing business logic and APIs.