@@ -4,6 +4,7 @@ import com.google.gson.*;
 
 import java.io.*;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.Base64;
@@ -42,7 +43,7 @@ public class ApiClient {
 
   public JsonObject request(String method, String path, JsonObject body) {
     try {
-      URL url = new URL(baseUrl + path);
+      URL url = URI.create(baseUrl + path).toURL();
       HttpURLConnection conn = (HttpURLConnection) url.openConnection();
       conn.setRequestMethod(method);
       conn.setConnectTimeout(10000);
